@startuml
skinparam defaultFontName Chalkboard

title Transaction entity state diagram
[*] --> Preparing : transaction created
Preparing --> Committing : all branches have voted commit
Preparing --> Aborting : any branch has voted abort
Preparing --> Aborting: timeout
Committing --> Committing: abort requested (ignored)
Committing --> Committed : all branches confirm commit
Aborting --> Aborted : all branches confirm abort

note right of Preparing: side-effect: call prepare() on branches
note bottom of Committing: side-effect: call commit() on branches
note right of Aborting: side-effect: call abort() on branches

state Preparing #LightBlue
state Committing #LightGreen
state Aborting #LightCoral
state Committed #Green
state Aborted #Coral
@enduml